--- a/src/Styles/comp2.css
+++ b/src/Styles/comp2.css
@@ -1,17 +1,22 @@
 div.design-it{
-    height: 30rem;
+    height: 29.25rem;
     background: url("../assets/Homepage/Back_drop.png");
     background-position: center;
     background-repeat: no-repeat;
     /* background-size: cover; */
     transition: all ease 0.5s;
+    position: relative;
+    z-index: 3;
 }
-
+/* div.design-it:hover{
+    background: url("../assets/Homepage/You\ dream\ it_Biyi\ Aroloye.png");
+    background-position: center;
+    background-repeat: no-repeat;
+} */
 div.container{
     /* max-width: 20.8125rem; */
     /* width: 60%; */
     /* margin: 0 auto; */
-    height: 60%;
     color: var(--primary-color-2);
     /* padding-block: 1.875rem; */
     display: flex;
@@ -19,11 +24,6 @@ div.container{
     justify-content: center;
     align-items: center;
     position: relative;
-}
-div.container:hover{
-    background: url("../assets/Homepage/You\ dream\ it_Biyi\ Aroloye.png");
-    background-position: center;
-    background-repeat: no-repeat;
 }
 div.container > div:nth-of-type(1){
     max-width: 20.8125rem; 
@@ -42,10 +42,10 @@ div.container > div > div >  p:nth-of-type(1){
     flex: 1;
     text-align: center;
 }
-div.container:hover  div > p:nth-of-type(1),
+/* div.container:hover  div > p:nth-of-type(1),
 div.container:hover  div > p:nth-of-type(2){
     color: var(--primary-color-1);
-}
+} */
 div.container > div > div > p:nth-of-type(2){
     color: var(--primary-color-2);
     font-family: better-yesterday;
@@ -56,9 +56,9 @@ div.container > div > div > p:nth-of-type(2){
 }
 div.lets-go-together{
     position: absolute;
-    bottom:20%;
-    right: 10%;
-    transform: translateX(-50%) translateY(-50%);
+    /* bottom:20%;
+    right: 10%; */
+    /* transform: translateX(-50%) translateY(-50%); */
     color: #060606;
     text-align: center;
     font-size: var(--font-16);
@@ -71,13 +71,13 @@ div.lets-go-together{
     width:5.0rem;
     height: 5.0rem;
 } 
-div.container:hover div.lets-go-together{
+/* div.design:hover div.lets-go-together{
     color: var(--primary-color-2);
     background-color:#060606;
-}
+} */
 @media screen and (min-width: 768px){
     div.design-it{
-        height: 46.875rem;
+        height: 29.25rem;
         background: url("../assets/Homepage/Back_drop.png");
         background-position: center;
         /* background-size: cover; */
@@ -88,7 +88,6 @@ div.container:hover div.lets-go-together{
         /* max-width: 20.8125rem; */
         /* width: 60%; */
         /* margin: 0 auto; */
-        height: 60%;
         color: var(--primary-color-2);
         /* padding-block: 1.875rem; */
         display: flex;
@@ -123,8 +122,8 @@ div.container:hover div.lets-go-together{
     }
     div.lets-go-together{
         position: absolute;
-        bottom:20%;
-        right: 20%;
+        /* bottom:20%;
+        right: 20%; */
         color: #060606;
         text-align: center;
         font-size: var(--font-16);
@@ -141,7 +140,7 @@ div.container:hover div.lets-go-together{
 
 @media screen and (min-width: 1024px){
     div.design-it{
-        height: 46.875rem;
+        height: 29.25rem;
         background: url("../assets/Homepage/Back_drop.png");
         background-position: center;
         background-repeat: no-repeat;
@@ -153,7 +152,6 @@ div.container:hover div.lets-go-together{
         /* max-width: 20.8125rem; */
         /* width: 60%; */
         /* margin: 0 auto; */
-        height: 60%;
         color: var(--primary-color-2);
         /* padding-block: 1.875rem; */
         display: flex;
@@ -187,8 +185,8 @@ div.container:hover div.lets-go-together{
     }
     div.lets-go-together{
         position: absolute;
-        bottom:20%;
-        right: 25%;
+        /* bottom:20%;
+        right: 25%; */
         color: #060606;
         text-align: center;
         font-size: var(--font-16);
