--- a/src/Styles/learnmore.css
+++ b/src/Styles/learnmore.css
@@ -47,6 +47,7 @@ div.learnmore-container > input{
     background-color: transparent;
     display: block;
     margin: 0 auto;
+    color: #fff;
     width: 90%;
     padding: 16px 0px 16px 14px;
     border-radius: 6px;
