--- a/src/Styles/homepage.css
+++ b/src/Styles/homepage.css
@@ -82,29 +82,39 @@ div.homepg-mission{
     left:0;
     background-color: #FFF;
     width: 100%;
-    height: 25rem;
+    height: 31.25rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-div.homepg-mission > img{
+div.homepg-mission > img.mission-img{
+    display: block;
     transform: scale(0.6);
 }
-@media screen and (max-width:375px) {
-    div.homepg-mission > img{
-        transform: scale(0.45);
-    }   
+div.homepg-mission > img.mobile-mission-img{
+    display: none;
 }
-div.homepg-mission > p{
+
+@media screen and (max-width:426px) {
+    div.homepg-mission > img.mission-img{
+        display: none;
+        transform: scale(0.45);
+    }
+    div.homepg-mission > img.mobile-mission-img{
+        display: block;
+    }  
+}
+div.homepg-mission > div{
     position: absolute;
-    left:6.563rem;
+    left:50%;
+    transform: translateX(-50%);
     top: 0;
     background: #000;
     padding: 0.5rem;
     border-radius: 0px 0px 0.25rem 0.25rem;
     color: #FFF;
     text-align: center;
-    font-size: 1.25rem;
+    font-size: 1rem;
     font-weight: 600;
 }
 div.homepg-brand{
@@ -142,21 +152,23 @@ div.homepg-brand-container-main{
     animation: motion 15s linear 1s infinite alternate;
 }*/
 div.homepg-brand-container{
+    display: none;
+}
+div.homepg-brand-container-mobile{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    /* row-gap: 8px; */
-    /* column-gap: 8px; */
     justify-content: center;
+    gap: 32px
 }
-
-@media screen and (max-width: 500px) {
+div.homepg-brand-container-mobile > img{
+    transform: scale(1.1);
+}
+/* @media screen and (max-width: 500px) {
     div.homepg-brand-container{
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
-        /* row-gap: 4px; */
-        /* column-gap: 8px; */
         padding-inline-start: 50px;
         animation: motion 10s linear infinite alternate;
     }
@@ -168,15 +180,13 @@ div.homepg-brand-container{
             transform: translateX(-125%);
         }
     }
-}
+} */
 
-@media screen and (max-width: 376px) {
+/* @media screen and (max-width: 376px) {
     div.homepg-brand-container{
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
-        /* row-gap: 4px; */
-        /* column-gap: 8px; */
         padding-inline-start: 0px;
         animation: motion 10s linear infinite alternate;
     }
@@ -189,11 +199,7 @@ div.homepg-brand-container{
             transform: translateX(-190%);
         }
     }
-}
-
-div.homepg-brand-container > img{
-    transform: scale(0.6);
-}
+} */
 /*
 @keyframes motion {
  from{
@@ -347,10 +353,11 @@ div.homepg-mission{
     justify-content: center;
     align-items: center;
 }
-div.homepg-mission > img{
+div.homepg-mission > img.mission-img{
+    display: block;
     transform: scale(0.9);
 }
-div.homepg-mission > p{
+div.homepg-mission > div{
     position: absolute;
     left: 6.563rem;
     top: 0;
@@ -382,6 +389,9 @@ div.homepg-brand-container{
     row-gap: 22px;
     column-gap: 23px;
     justify-content: center;
+}
+div.homepg-brand-container-mobile{
+    display: none;
 }
 div.homepg-brand-container > img{
     transform: scale(0.75);
@@ -455,9 +465,9 @@ div.homepg-mission{
     justify-content: center;
     align-items: center;
 }
-div.homepg-mission > p{
+div.homepg-mission > div{
     position: absolute;
-    left:6.563rem;
+    left:10%;
     top: 0;
     background: #000;
     padding: 0.5rem;
